# Bugs-in-Game-Compatibility-Layer

./: README.md
data/final/cr_content_labeling/: agreement_calculator(issue_tracker).py  agreement_calculator(protondb).py  issue_tracker_label_pipeline.py  issue_tracker_random_sampler.py  issue_tracker_sample_number.py  llm_labeler(issue_tracker).py  llm_labeler(protondb).py  protondb_label_pipeline.py  protondb_random_sampler.py  protondb_sample_counter.py  verify_content_coding.py
data/final/crs_with_discussion/: labeled_report_discussion_pair_split_0.json  labeled_report_discussion_pair_split_2.json  labeled_report_discussion_pair_split_21.json  labeled_report_discussion_pair_split_25.json  labeled_report_discussion_pair_split_26.json  labeled_report_discussion_pair_split_28.json  labeled_report_discussion_pair_split_3.json  labeled_report_discussion_pair_split_31.json  labeled_report_discussion_pair_split_5.json  labeled_report_discussion_pair_split_6.json  (+2 more)
src/data_collection_and_taxonomy/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/data_collection_and_taxonomy/data_analysis_pipeline/: comp_report_analyzer.py  report_discussion_analyzer.py
src/data_collection_and_taxonomy/data_select_pipeline/: compatibility_report_selector.py  data_filter.py  issue_selector.py  report_discussion_pair_collector.py
src/data_collection_and_taxonomy/utls/: data_collector.py  data_divider.py  utls.py
src/fix_characterization/: cr_fix_symptom_mapper.py  rq3_sankey.py
src/platform_comparison/: .env.example  run_pipeline.py
(+436 files in other folders)
